--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                     
                     //send data to the server
                     var data = {};
-                    data['str'] = text
+                    data['str'] = text;
 
                     $.post("/request",data,
                     function(data,status){
