--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
         <title> Talk Tracer </title>
         
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
+        <script src="{{ url_for('static',filename='d3.min.js') }}"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript">
@@ -19,20 +20,22 @@
             //submit click function
             $("#button-submit").click(function(){
                 var text = $("#text-input").val();
-                if(/^[0-9]+$/.test(text)){
+                if(text != null){
     
                     //send data to the server
                     var data = {};
                     data['str'] = text
-                    
+                    console.log(data)
+
                     $.post("/request",data,
                     function(data,status){
+                        alert('here');
                         $("#tri").text(data);
                     },"json");
     
                 }else
                 {
-                    alert('Please enter an integer');
+                    alert('Please enter a sentence');
                 }
             });
         });
@@ -43,13 +46,13 @@
         <div class="nav-bar"></div>
 
         <div class="row">
-            <div class="left-column">          
+            <div id="left" class="left-column">          
                 <div id="tri" class="ontology">
                     ontology view
                 </div>
             </div>
 
-            <div class="right-column">
+            <div id="right" class="right-column">
                 <div id="app" class="input">
     
                     <product :premium="premium" @add-to-cart="addToCart" @remove-from-cart="removeFromCart"></product>
@@ -68,5 +71,6 @@
 
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <script src="{{ url_for('static',filename='main.js') }}"></script>
+        <script src="{{ url_for('static',filename='graph.js') }}"></script>
     </body>
 </html>
