--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,6 @@ body {
   }
 
   .input {
-    display: flex;
     width: 100%;
   }
   
@@ -98,15 +97,15 @@ body {
     padding: 5px 20px;
   }
   
-  button {
-    margin-top: 30px;
+  .button {
+    margin-top: 5px;
     border: none;
     background-color: #16C0B0;
     color: white;
     height: 40px;
     width: 100px;
-    font-size: 14px;
-    border-radius: 6px;
+    font-size: 16px;
+    border-radius: 5px;
   } 
   
   .disabledButton {
