--- a/templates/index.html
+++ b/templates/index.html
@@ -9,49 +9,6 @@
         <script src="{{ url_for('static',filename='d3.min.js') }}"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script type="text/javascript">
-            //jQuery
-            $("document").ready(function() {
-                //submit click function
-                $("#button-submit").click(function(){
-                    var text = $("#text-input").val();
-                    if(text != null){
-                        //send data to the server
-                        var data = {};
-                        data['str'] = text
-                        console.log(data)
-                        
-                        // Flask style post
-                        $.post("/request", data, function(data,status){
-                            //alert('flask post');
-                            $("#onto").text(data.sent);
-                        },"json");
-
-                        // Ajax style post
-                        /*$.ajax({
-                            type: 'POST',
-                            url: "/request",
-                            data: data,
-                            dataType: 'json', 
-                            success: function(data) { 
-                                //alert('ajax post');
-                                console.log(data);
-                                $("#onto").text(data.sent);
-                            },
-                            error: function(xhr, type) {
-                                alert(xhr.responseText);
-                                alert(type);
-                            }
-                        });*/
-        
-                    }else
-                    {
-                        alert('Please enter a sentence');
-                    }
-                });
-            });
-        </script>
-    </head>
 
     <body>
         <div class="nav-bar"></div>
@@ -67,16 +24,10 @@
                 <div id="app" class="input">
                     <product :premium="premium" @add-to-cart="addToCart" @remove-from-cart="removeFromCart"></product>
                 </div>
-
-                <div id="tri" class="triple">
-                    <label for="tri"> Triple Result </label>
-                    <p/>
-                    <textarea style="height: 100%; padding: 20px;"> print triple here! </textarea>
-                </div>
             </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
