--- a/templates/index.html
+++ b/templates/index.html
@@ -34,5 +34,6 @@
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <script src="{{ url_for('static',filename='main.js') }}"></script>
         <script src="{{ url_for('static',filename='graph.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/EntityGraph.js') }}"></script>
     </body>
 </html>
