--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,12 @@
 
         <div class="row">
             <div id="left" class="left-column">          
-                <div id="onto" class="ontology">
-                    ontology view
-                </div>
+                <iframe src="https://ontologytest.slack.com/messages/CHQ9K5NNT/" class = "convBox" width = "100%" height = "100%"  scrolling = "no" frameborder =  "0">  
+                </iframe>
+            </div>
+
+            <div id="middle" class="middle-column">  
+                <div id="heap"></div>
             </div>
 
             <div id="right" class="right-column">
@@ -33,7 +36,8 @@
 
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <script src="{{ url_for('static',filename='main.js') }}"></script>
-        <script src="{{ url_for('static',filename='graph.js') }}"></script>
-        <script src="{{ url_for('static',filename='js/EntityGraph.js') }}"></script>
+        <script src="{{ url_for('static',filename='ConvTree.js') }}"></script>
+        <!--script src="{{ url_for('static',filename='graph.js') }}"></script-->
+        <!--script src="{{ url_for('static',filename='js/TextLevelView.js') }}"--></script>
     </body>
 </html>
