--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <script src="{{ url_for('static',filename='d3.min.js') }}"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    </head>
     <body>
         <div class="nav-bar"></div>
 
@@ -27,12 +27,15 @@
                 <div id="app" class="input">
                     <product :premium="premium" @add-to-cart="addToCart" @remove-from-cart="removeFromCart"></product>
                 </div>
+                <div id = "test">
+                </div>
             </div>
         </div>
 
         <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://cdn.bootcss.com/socket.io/1.5.1/socket.io.min.js"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <script src="{{ url_for('static',filename='main.js') }}"></script>
