Using customized hierarchy.js function, can actively update the tree hierarchy and its layout (bug still exists with id)

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
         <script type="text/javascript" src="https://cdn.bootcss.com/socket.io/1.5.1/socket.io.min.js"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <script src="{{ url_for('static',filename='hierarchy.js') }}"></script>
         <script src="{{ url_for('static',filename='main.js') }}"></script>
         <script src="{{ url_for('static',filename='ConvTree.js') }}"></script>
         <!--script src="{{ url_for('static',filename='graph.js') }}"></script-->
